fix: tooltip: modifier image flashing
and sometimes not appearing.
img tag was taking too long, background-image kept it present
even as the element is recreated quickly.
Also hide quantity for miniboss modifiers.  Let them govern their own tooltip

--- a/src/style.css
+++ b/src/style.css
@@ -2678,3 +2678,9 @@ body.dragging-card .floating-card-holder .empty-slot {
 #inspector-tooltip-content .tooltip-modifier-key.blessing {
   color: rgb(255, 232, 101);
 }
+
+.modifier-tooltip-image {
+  width: 16px;
+  height: 16px;
+  background-size: contain;
+}
